# desktop-usage-helper

./: .gitattributes  .gitignore  CLAUDE.md  README.md  WIKI.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  vite.config.js  widget.html
.cargo/: config.toml
.hermes/plans/: 2026-06-22_desktop-helper-mega-batch.md
docs/: api-research.md
scripts/: publish-release.sh  publish.py  publish_v026.py
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  errors.rs  history.rs  i18n.rs  lib.rs  main.rs  models.rs  notify.rs  poll.rs  service.rs  sync.rs  tray.rs
src-tauri/src/provider/: anthropic.rs  codex.rs  cursor.rs  github_copilot.rs  minimax.rs  mod.rs  ollama.rs  openai.rs  opencode.rs  registry.rs  zai.rs
src/components/: Dashboard.jsx  EmptyState.jsx  ProviderCard.jsx  SettingsModal.jsx  StatusBar.jsx  TopBar.jsx  TrendChart.jsx
src/i18n/: en-US.js  zh-CN.js
src/lib/: tauri.js
src/stores/: useConfigStore.js  useI18nStore.js  useThemeStore.js  useUsageStore.js
src/widget/: WidgetApp.jsx  main.jsx
